--- a/src/component/form1/form1.styles.scss
+++ b/src/component/form1/form1.styles.scss
@@ -1,6 +1,5 @@
-.form1 {
-  width: 100%;
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: flex-start;
 }
