--- a/src/pages/result/results.styles.scss
+++ b/src/pages/result/results.styles.scss
@@ -1,9 +1,16 @@
 .result {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
 }
 .btn {
   margin-top: 10px;
+}
+.chart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.tblR {
+  width: 30px !important;
 }
